--- a/client/package.json
+++ b/client/package.json
@@ -26,5 +26,8 @@
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0"
   },
+  "expo": {
+    "sdkVersion": "34.0.0"
+  },
   "private": true
 }
