--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.14.2",
+    "firebase-admin": "^8.11.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
