--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
+    "expo": "^37.0.8",
     "firebase": "^7.14.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
