--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "expo-cli": "^3.20.1",
     "express": "^4.17.1",
     "firebase": "^7.14.2",
     "firebase-admin": "^8.11.0",
