--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "chai-as-promised": "^7.1.1"
   },
   "expo": {
     "sdkVersion": "34.0.0"
