--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,11 @@
     "@react-navigation/stack": "^5.2.13",
     "axios": "^0.19.2",
     "expo": "^37.0.9",
-    "firebase": "^7.14.2",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
@@ -26,8 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0",
-    "chai-as-promised": "^7.1.1"
+    "babel-preset-expo": "~8.1.0"
   },
   "expo": {
     "sdkVersion": "34.0.0"
